--- a/eurekasvr/src/main/resources/application.yml
+++ b/eurekasvr/src/main/resources/application.yml
@@ -1,9 +1,14 @@
-server.port: 8761
+spring.output.ansi.enabled: always
+
+server:
+  port: 8761
 
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-  server.waitTimeInMsWhenSyncEmpty: 1
-  serviceUrl.defaultZone: http://localhost:8761
+  server:
+    waitTimeInMsWhenSyncEmpty: 1
+  serviceUrl:
+    defaultZone: http://localhost:8761
   
