post error happend

--- a/member/src/main/resources/bootstrap.yml
+++ b/member/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 spring: 
-    application.name : memberservcie
+    application.name : memberservice
     profiles.active : default
     cloud.config.uri: http://localhost:8888
 
