--- a/eurekasvr/src/main/resources/application.yml
+++ b/eurekasvr/src/main/resources/application.yml
@@ -11,4 +11,11 @@ eureka:
     waitTimeInMsWhenSyncEmpty: 1
   serviceUrl:
     defaultZone: http://localhost:8761
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "refresh"
   
