--- a/moviesquare/build.gradle
+++ b/moviesquare/build.gradle
@@ -23,6 +23,8 @@ ext {
 }
 
 dependencies {
+
+	
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -38,6 +40,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compile group: 'io.github.openfeign.form', name: 'feign-form', version: '3.8.0'
 	compile group: 'io.github.openfeign.form', name: 'feign-form-spring', version: '3.8.0'
 	compile group: 'io.github.openfeign', name: 'feign-jackson', version: '11.0'
